# AyuxOS

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FILESYSTEM.md  Makefile  README.md  README_MILESTONE1.md  REPO_STRUCTURE.md  ROADMAP.md
init/: Cargo.toml
init/src/: main.rs
kernel/: ayux_defconfig
libraries/libaipc/: Cargo.toml
libraries/libaipc/src/: lib.rs
libraries/libayux/: Cargo.toml
libraries/libayux/src/: lib.rs  paths.rs  shm.rs
libraries/libayux_hal/: Cargo.toml
libraries/libayux_hal/src/: clock.rs  common.rs  discovery.rs  display.rs  input.rs  lib.rs  power.rs  random.rs  storage.rs
libraries/libgraphics/: Cargo.toml
libraries/libgraphics/src/: canvas.rs  color.rs  font.rs  image.rs  lib.rs  rect.rs
libraries/libui/: Cargo.toml
libraries/libui/src/: lib.rs  theme.rs  widget.rs  widgets.rs  window.rs
scripts/: build_kernel.sh  generate_rootfs.sh  run_qemu.sh  verify_initramfs.sh
services/auth_service/: Cargo.toml
services/auth_service/src/: main.rs
services/log_service/: Cargo.toml
services/log_service/src/: main.rs
services/network_manager/: Cargo.toml
services/network_manager/src/: main.rs
services/security_manager/: Cargo.toml
services/security_manager/src/: main.rs
services/session_manager/: Cargo.toml
services/session_manager/src/: main.rs
services/window_server/: Cargo.toml
services/window_server/src/: main.rs
system_apps/ayux_shell/: Cargo.toml
system_apps/ayux_shell/src/: main.rs
system_apps/desktop/: Cargo.toml
system_apps/desktop/src/: main.rs
system_apps/login_manager/: Cargo.toml
system_apps/login_manager/src/: main.rs
system_apps/login_manager_gui/: Cargo.toml
system_apps/login_manager_gui/src/: main.rs
system_apps/terminal_emulator/: Cargo.toml
system_apps/terminal_emulator/src/: main.rs
tests/: integration_test.py
tests/milestone2/: Cargo.toml
tests/milestone2/src/: lib.rs
tests/milestone3/: Cargo.toml
tests/milestone3/src/: lib.rs  milestone3_5.rs
