[workspace]
members = [
    "init",
    "system_apps/login_manager",
    "system_apps/ayux_shell",
    "system_apps/login_manager_gui",
    "system_apps/desktop",
    "system_apps/terminal_emulator",
    "libraries/libayux",
    "libraries/libaipc",
    "libraries/libayux_hal",
    "libraries/libgraphics",
    "libraries/libui",
    "services/auth_service",
    "services/security_manager",
    "services/session_manager",
    "services/log_service",
    "services/network_manager",
    "services/window_server",
    "tests/milestone2",
    "tests/milestone3",
]
resolver = "2"
