[package]
name = "window_server"
version = "0.1.0"
edition = "2021"

[dependencies]
libaipc = { path = "../../libraries/libaipc" }
libayux = { path = "../../libraries/libayux" }
libayux_hal = { path = "../../libraries/libayux_hal" }
libgraphics = { path = "../../libraries/libgraphics" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
nix = "0.26"
