[package]
name = "milestone2_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
libaipc = { path = "../../libraries/libaipc" }
libayux = { path = "../../libraries/libayux" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.27.0"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
nix = { version = "0.31.3", features = ["fs", "process", "signal"] }
